# daqtt

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
daemon/: compose.yml
daemon/daqttd/: .clang-uml  CMakeLists.txt  Dockerfile  main.cpp
daemon/daqttd/conan/: conanfile.txt
daemon/daqttd/include/: command-line-parser.hpp  influxdb.hpp
daemon/daqttd/lib/: CMakeLists.txt
daemon/daqttd/lib/daqtt/: .clang-uml
daemon/daqttd/lib/include/daqtt/: subscriber.h
daemon/daqttd/lib/src/: connector.cpp  sender.cpp  subscriber.cpp
daemon/daqttd/resource/config/: daqttd.conf  daqttd.json
daemon/daqttd/resource/systemd/: daqttd.service
daemon/daqttd/src/: main.cpp
daemon/lib/daqtt/: .clang-uml  CMakeLists.txt
daemon/lib/daqtt/conan/: conanfile.txt
daemon/lib/daqtt/include/: callback.h  connection_descriptor.h  connector.h  daqtt.h  sender.h  utils.h
daemon/lib/daqtt/src/: connector.cpp  sender.cpp  subscriber.cpp
examples/sinus/: CMakeLists.txt  conanfile.txt  sinus.cpp
